--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-sweetalert2": "^3.0.3",
+    "vuelidate": "^0.7.5",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.2"
   },
